--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -6,6 +6,18 @@
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline'"
     />
+
+    <link href="https://cdn.syncfusion.com/ej2/21.1.35/ej2-base/styles/material.css" rel="stylesheet" />
+    <link href="https://cdn.syncfusion.com/ej2/21.1.35/ej2-react-layouts/styles/material.css" rel="stylesheet" />
+    <link href="https://cdn.syncfusion.com/ej2/21.1.35/ej2-react-buttons/styles/material.css" rel="stylesheet" />
+    <link href="https://cdn.syncfusion.com/ej2/21.1.35/ej2-react-kanban/styles/material.css" rel="stylesheet" />
+    <link href="https://cdn.syncfusion.com/ej2/21.1.35/ej2-react-calendars/styles/material.css" rel="stylesheet" />
+    <link href="https://cdn.syncfusion.com/ej2/21.1.35/ej2-react-dropdowns/styles/material.css" rel="stylesheet" />
+    <link href="https://cdn.syncfusion.com/ej2/21.1.35/ej2-react-inputs/styles/material.css" rel="stylesheet" />
+    <link href="https://cdn.syncfusion.com/ej2/21.1.35/ej2-react-navigations/styles/material.css" rel="stylesheet" />
+    <link href="https://cdn.syncfusion.com/ej2/21.1.35/ej2-react-popups/styles/material.css" rel="stylesheet" />
+    <link href="https://cdn.syncfusion.com/ej2/21.1.35/ej2-react-schedule/styles/material.css" rel="stylesheet" />
+
     <title>LaTNote Manager</title>
   </head>
   <body>
