--- a/src/pages/course/Sections/Figure/Figure.css
+++ b/src/pages/course/Sections/Figure/Figure.css
@@ -1,10 +1,11 @@
 .card-grid {
   justify-content: center;
+  align-items: stretch;
+  padding-bottom: 10px;
 }
 
 .card {
   border: none;
-  padding: 20px;
   display: flex;
   flex-direction: column;
 }
@@ -22,29 +23,37 @@
   background-color: #EEEDEF;
   flex-grow: 1;
   margin-top: 10px;
-  height: 150px;
+  height: 200px;
+}
+
+.svg-content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.card-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .create-card {
   padding-top: 20px;
   padding-bottom: 20px;
   justify-content: center;
-  width: 21%;
-  margin: 0 auto;
 }
 
 .create-card-text {
   height: 100%;
   width: 100%;
-
   font-family: Arial, sans-serif;
   font-size: 16px;
-
   border: none;
   background-color: transparent;
-
   outline: none;
-
   display: flex;
   text-align: center;
 }
