--- a/src/pages/course/Sections/Figure/Figure.css
+++ b/src/pages/course/Sections/Figure/Figure.css
@@ -19,11 +19,29 @@
 }
 
 .card-content {
+  position: relative;
   padding: 10px;
   background-color: #EEEDEF;
   flex-grow: 1;
   margin-top: 10px;
   height: 200px;
+}
+
+.delete-icon {
+  width: 80%;
+  height: 80%;
+  overflow: auto;
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
+
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .svg-content {
@@ -38,6 +56,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .create-card {
