--- a/src/pages/course/CoursePage.css
+++ b/src/pages/course/CoursePage.css
@@ -1,3 +1,15 @@
+.add-button {
+  display: block;
+  width: 24px;
+  height: 24px;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  border-radius: 50%;
+  background-color: var(--add-button);
+  color: white;
+}
+
 .container {
   width: 100%;
   transition: width 0.3s;
