--- a/src/pages/course/Sections/Figure/Figure.css
+++ b/src/pages/course/Sections/Figure/Figure.css
@@ -82,6 +82,14 @@
   top: 0; left: 0; bottom: 0; right: 0;
 }
 
+.yes-delete {
+  visibility: visible;
+}
+
+.no-delete {
+  visibility: hidden;
+}
+
 .create-card-text::placeholder {
   color: var(--figure-title-placeholder);
 }
