--- a/src/components/common/Popup/Popup.css
+++ b/src/components/common/Popup/Popup.css
@@ -3,8 +3,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 35%;
-  max-width: 400px;
+  width: 50%;
+  height: 50%;
+  max-width: 50%;
+  max-height: 50%;
   background-color: white;
   padding: 20px;
   border-radius: 5px;
@@ -30,8 +32,15 @@
 }
 
 .modal-buttons {
-  text-align: right;
-  margin-top: 20px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
+
+.modal-buttons-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .cancel-button,
