--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -20,3 +20,9 @@
 *:focus {
   outline: none;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
