feat: Add ability to delete figure. feat: Add ability to zoom in figure.

--- a/src/components/common/Topbar/Topbar.css
+++ b/src/components/common/Topbar/Topbar.css
@@ -3,6 +3,7 @@
   box-shadow: unset;
   background-color: var(--topbar-bg);
   color: var(--topbar-color);
+  z-index: 100;;
 }
 
 .container .toolbar {
