--- a/src/components/common/SubItemTitle/SubItemTitle.css
+++ b/src/components/common/SubItemTitle/SubItemTitle.css
@@ -1,4 +1,8 @@
 .sub-item-title {
   font-size: 17px;
   color: var(--sub-item-title);
+  position: sticky;
+  top: 51px;
+  background-color: white;
+  z-index: 1;
 }
